prueba ensenar html

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #26282c;
+    background-color: rgb(241, 244, 247);
     font-family: 'Roboto' , sans-serif;
-    color: rgb(245, 230, 210);
+
 }
