--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@ body{
     font-family: 'Roboto' , sans-serif;
 
 }
+
+.Container-center{
+    height: 340px;
+    width: 200px;
+    margin: 0 auto;
+    
+
+
+}
