--- a/portafolio/src/App.css
+++ b/portafolio/src/App.css
@@ -5,12 +5,20 @@ body {
   text-align: center;
 }
 
-
 .card {
   display: flex;
   flex-direction: column;
   padding: 2em;
   max-width: 300px;
+}
+.navbar {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-nav{
+  display: flex;
+  list-style: none;
 }
 
 
